--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -4,12 +4,12 @@ project(linux VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.4 REQUIRED COMPONENTS Quick Widgets Bluetooth DBus)
+find_package(Qt6 REQUIRED COMPONENTS Quick Widgets Bluetooth DBus)
 find_package(OpenSSL REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(PULSEAUDIO REQUIRED libpulse)
 
-qt_standard_project_setup(REQUIRES 6.4)
+qt_standard_project_setup()
 
 qt_add_executable(librepods
     main.cpp
