--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -1,9 +1,10 @@
 name: Build LibrePods Linux
 
 on:
-  push:
-    branches:
-      - '*'
+  workflow_dispatch:
+#  push:
+#    branches:
+#      - '*'
 
 jobs:
   build-linux:
